// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortIcon should render a Down icon if order is desc 1`] = `
<styled.a
  href="#"
  sortOrder="desc"
>
  <Themed(Styled(withStrippedProps(ReactComponent)))
    sortOrder="desc"
  />
</styled.a>
`;

exports[`SortIcon should render a Down icon if order is null 1`] = `
<styled.a
  href="#"
  sortOrder={null}
>
  <Themed(Styled(withStrippedProps(ReactComponent)))
    sortOrder={null}
  />
</styled.a>
`;

exports[`SortIcon should render an Up icon if order is asc 1`] = `
<styled.a
  href="#"
  sortOrder="asc"
>
  <Themed(Styled(withStrippedProps(ReactComponent)))
    sortOrder="asc"
  />
</styled.a>
`;
